# mediainfo_bot

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  env-example  main.py  pyproject.toml  result.json  tmdb_wrapper.py
